Revert "Merge pull request #36 from deltahacks/fix-navbar-text-spacing"
This reverts commit 4fd359a0154b5f71929a969e2029ede1aa898c18, reversing
changes made to c2bfb5c986c078e0663c1d08dfee75e1a673e5ce.

--- a/my/src/assets/css/navbar.css
+++ b/my/src/assets/css/navbar.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700&display=swap');
-
 #title {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
+  font-family: Montserrat;
+  font-weight: 700;
   color: white;
   margin-left: 60px;
   display: inline-block;
@@ -37,7 +35,7 @@
     color 0.2s ease-in-out;
   float: left;
   background-color: transparent;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Open Sans", sans-serif;
   border: none;
   /* border-radius: 30px; */
   box-shadow: inset 0 0 0 2px #fff;
@@ -45,7 +43,7 @@
   cursor: pointer;
   /* display: inline-block; */
   font-size: 1.25em;
-  font-weight:600;
+  font-weight: 700;
   line-height: 0;
   padding: 0 1.75em;
   text-align: center;
@@ -89,8 +87,8 @@
 }
 
 .heading{
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
+  font-family: Montserrat;
+  font-weight: 700;
   color: white;
   margin-left: 60px;
   display: inline-block;
@@ -113,17 +111,13 @@
 
 #logout {
   float: right;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat;
   color: white;
-  font-size: 22px;
-  font-weight: 600;
-  margin-top: 35px;
-  margin-right: 3vw;
+  font-size: 18px;
+  margin-top: 40px;
+  margin-right: 2vw;
 }
-#logout:hover {
-  font-size: 22px;
-  font-weight: 400;
-}
+
 h1 {
   font-size: 2vw;
 }
