--- a/my/src/assets/css/status.css
+++ b/my/src/assets/css/status.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700&display=swap');
 
 .gradient-background {
   background: linear-gradient(270deg, #1a7fc3, #39bc82);
@@ -23,13 +22,13 @@
 
 p {
   color: white;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat;
   text-align: left;
 }
 
 .big {
   font-size: 7vw;
-  font-weight: 600;
+  font-weight: 700;
   padding: 2% 0 0 5%;
 }
 
@@ -145,14 +144,13 @@ p {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .apply {
-  font-family: 'Montserrat', sans-serif;
   width: 50%;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.4);
   box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-size: 5vw;
-  font-weight: 600;
+  font-weight: 700;
   padding-top: 2vw;
 }
 
@@ -163,7 +161,6 @@ p {
 }
 
 .apply-btn {
-  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   font: inherit;
   color: inherit;
@@ -172,7 +169,7 @@ p {
 
 .currentStatus {
   float: right;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat;
   color: white;
   margin-top: 1.5vw;
   margin-right: 1vw;
@@ -281,7 +278,7 @@ p {
 }
 
 .hellotext{
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat;
   font-size: 50px;
   /* line-height: 1.7; */
   font-weight:50;
